0.8.0 [in progress]
BaseFont selectable in config 
Constellation select from script fixed
TUI editing of some colors
Constellation boundaries
Mouse cursor optional timeout
RA/DE displays corrected for precession
	
0.7.1 [2005-09-17]
Fixed location saving bug.
Fixed date before 1970 crash on windows
Fixed search star crash.
Added the forgotten sts scripts to the package.
Fixed autoconf problem with libpng.
Fixed compilation with --disable-nls
Fixed option saving for flaglandscape and flagmoonscale

0.7.0 [2005-08-08]
Added planet trails - hit "4" or "," once for ecliptic, again for trails (advance time to observe).
Added precession of the equinoxes.
Added daylight savings accounting for all platforms (needs testing).
More realistic and efficient meteor showers.
Added and set-up gettext facilities.
Added maximum_fps configuration setting to allow limiting CPU usage.
Added rudimentary scripting features - see doc/commands.html.
Atmosphere now darkens during solar eclipses.
Added lunar eclipse simulation.
Added a fader class, lines and objects fade in/out easily now.
Added MacosX Xcode project file from Da-Woon Joung.
Added patches from Fumio Yamamoto for various fixes.
Removed all the libpng/zlib .c files from the glgpng directory, use host system libpng instead (fix debian bug #318026).
Fix to work with non-US keyboards.
Added more sky label languages.
Sky languages are no longer hard coded.
Cardinal points are now translated based on sky language.
TUI is now using gettext.
Added some accented characters to spacefont.
Fixed various typos and other bugs.
Added a Loading Bar class.
Started a code spring clean aiming at removing the design mistakes with the core class. The goal is to split the current stel_core into 2 classes, one being the actual core managing sky display, the other one stel_app will manage all I/O, parameters managment, UI, locales etc..Added fader on stars labels.
Added loading bars for nebulae and stars loading.
Corrected Sun rotational period.