@@ -5,6 +5,8 @@ TUI editing of some colors
 Constellation boundaries
 Mouse cursor optional timeout
 RA/DE displays corrected for precession
+Option to allow UI use during scripts (flag_script_allow_ui)
+CTRL-p will play the startup.sts script on demand
 	
 0.7.1 [2005-09-17]
 Fixed location saving bug.
